--- a/index.html
+++ b/index.html
@@ -2,21 +2,25 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta
-    name="viewport"
-    content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
-  />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <title>Soulmate Finder 💖</title>
 
+  <!-- Tailwind CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- Custom CSS -->
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 
-<body class="bg-gradient-to-b from-pink-100 to-purple-200 min-h-screen flex items-center justify-center">
-  <div id="app" class="w-full max-w-md mx-3 bg-white rounded-3xl shadow-2xl p-6"></div>
+<body class="min-h-screen flex items-center justify-center bg-gradient-to-b from-pink-100 to-purple-200">
 
+  <div id="app" class="w-full max-w-md bg-white rounded-3xl shadow-2xl p-6"></div>
+
+  <!-- SCRIPT ORDER IS CRITICAL -->
   <script src="js/screens.js"></script>
   <script src="js/interactions.js"></script>
   <script src="js/app.js"></script>
+
 </body>
 </html>
