--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 
   <title>Soulmate Finder 💖</title>
 
+  <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- Custom CSS -->
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 
