--- a/index.html
+++ b/index.html
@@ -3,13 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
   <title>Soulmate Finder 💖</title>
 
-  <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
-
-  <!-- Custom CSS -->
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 
@@ -17,10 +13,11 @@
 
   <div id="app" class="w-full max-w-md bg-white rounded-3xl shadow-2xl p-6"></div>
 
-  <!-- SCRIPT ORDER IS CRITICAL -->
-  <script src="js/screens.js"></script>
-  <script src="js/interactions.js"></script>
-  <script src="js/app.js"></script>
+  <!-- IMPORTANT: module scripts -->
+  <script type="module" src="js/firebase.js"></script>
+  <script type="module" src="js/screens.js"></script>
+  <script type="module" src="js/interactions.js"></script>
+  <script type="module" src="js/app.js"></script>
 
 </body>
 </html>
