--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
 
   <div id="app" class="w-full max-w-md bg-white rounded-3xl shadow-2xl p-6"></div>
 
-  <!-- IMPORTANT: module scripts -->
-  <script type="module" src="js/firebase.js"></script>
-  <script type="module" src="js/screens.js"></script>
-  <script type="module" src="js/interactions.js"></script>
+  <!-- ONLY ONE MODULE ENTRY POINT -->
   <script type="module" src="js/app.js"></script>
 
 </body>
