--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <div id="app" class="w-full max-w-md bg-white rounded-3xl shadow-2xl p-6"></div>
 
-  <!-- ONLY ONE MODULE ENTRY POINT -->
+  <!-- SINGLE ENTRY POINT -->
   <script type="module" src="js/app.js"></script>
 
 </body>
