--- a/index.html
+++ b/index.html
@@ -5,16 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Soulmate Finder 💖</title>
 
+  <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- Custom CSS -->
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 
 <body class="min-h-screen flex items-center justify-center bg-gradient-to-b from-pink-100 to-purple-200">
 
+  <!-- This is where your app renders -->
   <div id="app" class="w-full max-w-md bg-white rounded-3xl shadow-2xl p-6"></div>
 
-  <!-- SINGLE ENTRY POINT -->
-  <script type="module" src="js/app.js"></script>
+  <!-- ✅ THIS IS THE SRC YOU ARE ASKING ABOUT -->
+  <!-- app.js is the ENTRY POINT -->
+  <script type="module" src="./js/app.js"></script>
 
 </body>
 </html>
