--- a/index.html
+++ b/index.html
@@ -5,20 +5,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Soulmate Finder 💖</title>
 
-  <!-- Tailwind -->
+  <!-- Tailwind CDN (OK for now) -->
   <script src="https://cdn.tailwindcss.com"></script>
 
-  <!-- Custom CSS -->
-  <link rel="stylesheet" href="css/styles.css" />
+  <!-- ✅ FIXED CSS PATH -->
+  <!-- IMPORTANT: ./ ensures correct relative path on Netlify -->
+  <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
 <body class="min-h-screen flex items-center justify-center bg-gradient-to-b from-pink-100 to-purple-200">
 
-  <!-- This is where your app renders -->
-  <div id="app" class="w-full max-w-md bg-white rounded-3xl shadow-2xl p-6"></div>
+  <!-- APP ROOT -->
+  <div
+    id="app"
+    class="w-full max-w-md bg-white rounded-3xl shadow-2xl p-6">
+  </div>
 
-  <!-- ✅ THIS IS THE SRC YOU ARE ASKING ABOUT -->
-  <!-- app.js is the ENTRY POINT -->
+  <!-- ✅ SINGLE MODULE ENTRY POINT -->
+  <!-- DO NOT ADD ANY OTHER SCRIPT TAGS -->
   <script type="module" src="./js/app.js"></script>
 
 </body>
