--- a/index.html
+++ b/index.html
@@ -5,24 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Soulmate Finder 💖</title>
 
-  <!-- Tailwind CDN (OK for now) -->
+  <!-- Tailwind CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
 
-  <!-- ✅ FIXED CSS PATH -->
-  <!-- IMPORTANT: ./ ensures correct relative path on Netlify -->
+  <!-- ✅ CORRECT CSS PATH -->
   <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
 <body class="min-h-screen flex items-center justify-center bg-gradient-to-b from-pink-100 to-purple-200">
 
-  <!-- APP ROOT -->
   <div
     id="app"
     class="w-full max-w-md bg-white rounded-3xl shadow-2xl p-6">
   </div>
 
   <!-- ✅ SINGLE MODULE ENTRY POINT -->
-  <!-- DO NOT ADD ANY OTHER SCRIPT TAGS -->
   <script type="module" src="./js/app.js"></script>
 
 </body>
