--- a/index.html
+++ b/index.html
@@ -5,22 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Soulmate Finder 💖</title>
 
-  <!-- Tailwind CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
-
-  <!-- ✅ CORRECT CSS PATH -->
   <link rel="stylesheet" href="./css/style.css" />
 </head>
 
 <body class="min-h-screen flex items-center justify-center bg-gradient-to-b from-pink-100 to-purple-200">
 
-  <div
-    id="app"
-    class="w-full max-w-md bg-white rounded-3xl shadow-2xl p-6">
-  </div>
+  <div id="app" class="w-full max-w-md bg-white rounded-3xl shadow-2xl p-6"></div>
 
-  <!-- ✅ SINGLE MODULE ENTRY POINT -->
   <script type="module" src="./js/app.js"></script>
-
 </body>
 </html>
