--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
 <body class="min-h-screen flex items-center justify-center bg-gradient-to-b from-pink-100 to-purple-200">
 
-  <div id="app" class="w-full max-w-md bg-white rounded-3xl shadow-2xl p-6"></div>
+  <div id="app"
+       class="w-full max-w-md bg-white rounded-3xl shadow-2xl p-6 transition-all">
+  </div>
 
   <script type="module" src="./js/app.js"></script>
 </body>
