--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
   <link rel="stylesheet" href="./css/style.css" />
 </head>
 
-<body class="min-h-screen flex items-center justify-center bg-gradient-to-b from-pink-100 to-purple-200">
+<body class="min-h-screen flex items-center justify-center">
 
-  <div id="app"
-       class="w-full max-w-md bg-white rounded-3xl shadow-2xl p-6 transition-all">
+  <div
+    id="app"
+    class="w-full max-w-md p-6 rounded-3xl shadow-2xl">
   </div>
 
   <script type="module" src="./js/app.js"></script>
