--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
 
 <body class="min-h-screen flex items-center justify-center">
 
-  <div
-    id="app"
-    class="w-full max-w-md p-6 rounded-3xl shadow-2xl">
-  </div>
+  <div id="app" class="w-full max-w-md p-6 rounded-3xl shadow-2xl"></div>
 
   <script type="module" src="./js/app.js"></script>
 </body>
