Add GSAP WebGL reactive background

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Soulmate Finder 💖</title>
 
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
   <link rel="stylesheet" href="./css/style.css" />
 </head>
 
